Package_Tools/include-C/curl/in_arbeit/multi.pp


  Tcurl_socket_callback = function (easy:PCURL; s:Tcurl_socket_t; what:longint; userp:pointer; socketp:pointer):longint;cdecl;
{ private socket
                                                        pointer  }
{
 * Name:    curl_multi_timer_callback
 *
 * Desc:    Called by libcurl whenever the library detects a change in the
 *          maximum number of milliseconds the app is allowed to wait before
 *          curl_multi_socket() or curl_multi_perform() must be called
 *          (to allow libcurl's timed events to take place).
 *
 * Returns: The callback should return zero.
  }
{ multi handle  }
{ see above  }

  Tcurl_multi_timer_callback = function (multi:PCURLM; timeout_ms:longint; userp:pointer):longint;cdecl;
{ private callback
                                                             pointer  }
{ CURL_DEPRECATED(7.19.5, "Use curl_multi_socket_action()") }

function curl_multi_socket(multi_handle:PCURLM; s:Tcurl_socket_t; running_handles:Plongint):TCURLMcode;cdecl;external;
function curl_multi_socket_action(multi_handle:PCURLM; s:Tcurl_socket_t; ev_bitmask:longint; running_handles:Plongint):TCURLMcode;cdecl;external;
{CURL_DEPRECATED(7.19.5, "Use curl_multi_socket_action()") }
function curl_multi_socket_all(multi_handle:PCURLM; running_handles:Plongint):TCURLMcode;cdecl;external;
{$ifndef CURL_ALLOW_OLD_MULTI_SOCKET}
{ This macro below was added in 7.16.3 to push users who recompile to use
   the new curl_multi_socket_action() instead of the old curl_multi_socket()
 }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   

function curl_multi_socket(x,y,z : longint) : longint;

{$endif}
{
 * Name:    curl_multi_timeout()
 *
 * Desc:    Returns the maximum number of milliseconds the app is allowed to
 *          wait before curl_multi_socket() or curl_multi_perform() must be
 *          called (to allow libcurl's timed events to take place).
 *
 * Returns: CURLM error code.
  }

function curl_multi_timeout(multi_handle:PCURLM; milliseconds:Plongint):TCURLMcode;cdecl;external;
type
  PCURLMoption = ^TCURLMoption;
  TCURLMoption =  Longint;
  Const
    CURLMOPT_SOCKETFUNCTION = CURLOPTTYPE_FUNCTIONPOINT+1;
    CURLMOPT_SOCKETDATA = CURLOPTTYPE_OBJECTPOINT+2;
    CURLMOPT_PIPELINING = CURLOPTTYPE_LONG+3;
    CURLMOPT_TIMERFUNCTION = CURLOPTTYPE_FUNCTIONPOINT+4;
    CURLMOPT_TIMERDATA = CURLOPTTYPE_OBJECTPOINT+5;
    CURLMOPT_MAXCONNECTS = CURLOPTTYPE_LONG+6;
    CURLMOPT_MAX_HOST_CONNECTIONS = CURLOPTTYPE_LONG+7;
    CURLMOPT_MAX_PIPELINE_LENGTH = CURLOPTTYPE_LONG+8;
    CURLMOPT_CONTENT_LENGTH_PENALTY_SIZE = CURLOPTTYPE_OFF_T+9;
    CURLMOPT_CHUNK_LENGTH_PENALTY_SIZE = CURLOPTTYPE_OFF_T+10;
    CURLMOPT_PIPELINING_SITE_BL = CURLOPTTYPE_OBJECTPOINT+11;
    CURLMOPT_PIPELINING_SERVER_BL = CURLOPTTYPE_OBJECTPOINT+12;
    CURLMOPT_MAX_TOTAL_CONNECTIONS = CURLOPTTYPE_LONG+13;
    CURLMOPT_PUSHFUNCTION = CURLOPTTYPE_FUNCTIONPOINT+14;
    CURLMOPT_PUSHDATA = CURLOPTTYPE_OBJECTPOINT+15;
    CURLMOPT_MAX_CONCURRENT_STREAMS = CURLOPTTYPE_LONG+16;
    CURLMOPT_LASTENTRY = (CURLOPTTYPE_LONG+16)+1;
;
{
 * Name:    curl_multi_setopt()
 *
 * Desc:    Sets options for the multi handle.
 *
 * Returns: CURLM error code.
  }

function curl_multi_setopt(multi_handle:PCURLM; option:TCURLMoption; args:array of const):TCURLMcode;cdecl;external;
function curl_multi_setopt(multi_handle:PCURLM; option:TCURLMoption):TCURLMcode;cdecl;external;
{
 * Name:    curl_multi_assign()
 *
 * Desc:    This function sets an association in the multi handle between the
 *          given socket and a private pointer of the application. This is
 *          (only) useful for curl_multi_socket uses.
 *
 * Returns: CURLM error code.
  }
function curl_multi_assign(multi_handle:PCURLM; sockfd:Tcurl_socket_t; sockp:pointer):TCURLMcode;cdecl;external;
{
 * Name:    curl_multi_get_handles()
 *
 * Desc:    Returns an allocated array holding all handles currently added to
 *          the multi handle. Marks the final entry with a NULL pointer. If
 *          there is no easy handle added to the multi handle, this function
 *          returns an array with the first entry as a NULL pointer.
 *
 * Returns: NULL on failure, otherwise a CURL **array pointer
  }
function curl_multi_get_handles(multi_handle:PCURLM):^PCURL;cdecl;external;
{
 * Name: curl_push_callback
 *
 * Desc: This callback gets called when a new stream is being pushed by the
 *       server. It approves or denies the new stream. It can also decide
 *       to completely fail the connection.
 *
 * Returns: CURL_PUSH_OK, CURL_PUSH_DENY or CURL_PUSH_ERROROUT
  }
const
  CURL_PUSH_OK = 0;  
  CURL_PUSH_DENY = 1;  
{ added in 7.72.0  }
  CURL_PUSH_ERROROUT = 2;  
type
  Pcurl_pushheaders = ^Tcurl_pushheaders;
  Tcurl_pushheaders = record
      {undefined structure}
    end;

{ forward declaration only  }

function curl_pushheader_bynum(h:Pcurl_pushheaders; num:Tsize_t):Pchar;cdecl;external;
(* Const before type ignored *)
function curl_pushheader_byname(h:Pcurl_pushheaders; name:Pchar):Pchar;cdecl;external;
type

  Tcurl_push_callback = function (parent:PCURL; easy:PCURL; num_headers:Tsize_t; headers:Pcurl_pushheaders; userp:pointer):longint;cdecl;
{$endif}

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function curl_multi_socket(x,y,z : longint) : longint;
begin
  curl_multi_socket:=curl_multi_socket_action(x,y,0,z);
end;


end.
